--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
    <bodystyle="background-color:rgb(228, 250, 210);">
 
 
-      <h1>Welcome to Stack Simplify - App Version - V14 </h1>
+      <h1>Welcome to Stack Simplify - App Version - V15 </h1>
 
 
-      <h3> DevOps for EKS with AWS Developer Tools</h3>
+      <h3> DevOps for ECS with AWS Developer Tools</h3>
 
 
       <p>Application Name: App1</p>
